--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
     <link rel="stylesheet" href="styles.css">
 
     <!--  jQuery  -->
-    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-
-    <!--  Open Sans Font  -->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:800' rel='stylesheet' type='text/css'>
+    <script src="jquery.min.js" type="text/javascript"></script>
 </head>
 
 <body>
