Added random word functionality.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <!--  StyleSheet  -->
     <link rel="stylesheet" href="styles.css">
 
+    <!--  Random Words  -->
+    <script src="random_words.js" type="text/javascript"></script>
+
     <!--  jQuery  -->
     <script src="jquery.min.js" type="text/javascript"></script>
 </head>
@@ -34,7 +37,7 @@
         </div>
 
         <div class="text_state">
-            <span class="letters"></span>?
+            <span class="letters"></span>
         </div>
 
         <form class="guess">
@@ -46,7 +49,7 @@
     <div class="win screen">
         <div class="screen_wrap">
             <h2>Hooray!</h2>
-            <!--<img class="china" src="imgs/china_cut.png" alt="China says good job!">-->
+            <img class="china" src="imgs/china_cut.png" alt="China says good job!">
             <img class="grant" src="imgs/grant_cut.png" alt="Grant says good job!">
             <p>
                 You guessed the word and saved your man!
